--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
+    "next-auth": "5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -28,7 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
